--- a/MotivaTED/App.xaml
+++ b/MotivaTED/App.xaml
@@ -2,6 +2,26 @@
     x:Class="MotivaTED.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MotivaTED">
+    xmlns:local="using:MotivaTED"
+    xmlns:ardconn="using:ArduinoBluetooth.Connection"
+    xmlns:ardconv="using:ArduinoBluetooth.Converter">
+
+    <Application.Resources>
+        <!-- Application-specific resources -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!--a BluetoothConnectionManager and a UIConverter, available everywhere within this app-->
+                <ResourceDictionary>
+                    <ardconn:BluetoothConnectionManager x:Key="BluetoothManager" />
+                    <ardconv:BluetoothStateConverter x:Key="StateConverter" />
+                </ResourceDictionary>
+                <!-- 
+                    Styles that define common aspects of the platform look and feel
+                    Required by Visual Studio project and item templates
+                 -->
+                <ResourceDictionary Source="/Styles/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
